--- a/04 - HTML5_e_CSS3_parte_2_posicionamento_listas_e_navegacao/Barbearia_Alura/produtos.css
+++ b/04 - HTML5_e_CSS3_parte_2_posicionamento_listas_e_navegacao/Barbearia_Alura/produtos.css
@@ -30,6 +30,12 @@ nav a {
 
 }
 
+nav a:hover{
+    color: #C78C19;
+    text-decoration: underline;
+
+}
+
 .produtos{
     width: 940px;
     margin: 0 auto;
@@ -45,11 +51,27 @@ nav a {
     margin: 0 1.5%;
     padding: 30px 20px;
     box-sizing: border-box;
+    border: 2px solid #000000;
+    border-radius: 10px;    
+    
+}
+
+.produtos li:hover{
+    border-color: #C78C19;
+
+}
+
+.produtos li:active{
+    border-color: #088C19;
 }
 
 .produtos h2{
     font-size: 30px;
     font-weight: bold;
+}
+
+.produtos li:hover h2{
+    font-size: 34px;
 }
 
 .produto-descricao{
