--- a/04 - HTML5_e_CSS3_parte_2_posicionamento_listas_e_navegacao/Barbearia_Alura/style.css
+++ b/04 - HTML5_e_CSS3_parte_2_posicionamento_listas_e_navegacao/Barbearia_Alura/style.css
@@ -1,3 +1,6 @@
+body{
+    font-family: 'Montserrat', sans-serif;
+}
 header {
     background: #BBBBBB;
     padding: 20px 0;
@@ -98,9 +101,7 @@ footer{
 }
 
 main{
-    width: 940px;
-    margin: 0 auto;
-
+    
 }
 
 form{
@@ -168,6 +169,13 @@ td, th{
     clear: left;
 }
 
+.principal {
+    padding: 3em 0;
+    background: #FEFEFE;
+    width: 940px;
+    margin: 0 auto;
+}
+
 .principal p {
     margin: 0 0 1em;
 }
@@ -186,6 +194,57 @@ td, th{
     margin: 0 20px 20px 0;
 }
 
-.imagembeneficios {
+.imagem-beneficios {
+    width: 60%;
+}
+
+.mapa{
+    padding: 3em 0;
+    background: linear-gradient(#FEFEFE, #888888);
+}
+
+.mapa p{
+    margin: 0 0 2em;
+}
+
+.mapa-conteudo {
+    width: 940px;
+    margin: 0 auto;
+}
+
+.video{
+    width: 560px;
+    margin: 2em auto;
+}
+
+.beneficios{
+    padding: 3em 0;
+    background: #888888;
+}
+
+.conteudo-beneficios{
+    width: 640px;
+    margin: 0 auto;
+}
+
+.lista-beneficios{
+    width: 40%;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.itens::before{
+    content: "★";
+}
+
+.itens{
+    line-height: 1.5;
+}
+
+.itens:first-child {
+    font-weight: bold;
+}
+
+.imagem-beneficios {
     width: 60%;
 }
